added a page for window garden and a hardware page talking about consoles i own

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -220,6 +220,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="thumb vn finished">
 			<a title="we know the devil" href="we-know-the-devil/index.html" target="log"><img src="we-know-the-devil/cover.png" tabindex="0" alt="we know the devil"></a>
 		</div>
+		<div class="thumb">
+			<a title="window garden" href="window-garden/index.html" target="log"><img src="window-garden/cover.jpg" tabindex="0" alt="window garden"></a>
+		</div>
 		<!--
 		<div class="thumb finished horror">
 			<a title="" href="2wip/index.html" target="log">milk outside a bag of milk outside a bag of milk</a>
