--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -54,6 +54,7 @@
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>19.dec.24: new: <a href="hardware.html">hardware</a> subpage + <a href="window-garden/index.html">window garden</a></li>
 			<li>29.nov.24: log: <a href="style-savvy-styling-star/">style savvy styling star</a></li>
 			<li>31.oct.24: minor changes around info.html + did a <a href="spreadsheet.html">spreadsheet</a> page of my gaming log!
 			<li>27.oct.24: log: <a href="style-savvy-styling-star/">style savvy styling star</a></li>
