--- a/doqmeat/vgs/hardware.html
+++ b/doqmeat/vgs/hardware.html
@@ -18,7 +18,8 @@
  <main>
   <h1>hardware</h1>
   <p>i don't have much stuff that i play in but i thought it would be cool to showcase what i have and the story behind them!</p>
-  <h2>3DS</h2>
+  <nav>table of contents: <a href="#3ds">3DS</a> - <a href="#switch-lite">switch lite</a> - <a href="#ps4">PS4</a> - <a href="#wii-u">wii u</a></nav>
+  <h2 id="3ds">3DS</h2>
   <img src="!g/consoles/3ds (1).jpg" alt="my 3ds closed showcazsing its awesome ghost stickers" width="70%" class="left">
   <p>thank you to my dad for getting me this back in may 2011. the 3DS launched in february 2011 but i still consider this a day one 3DS. he bought it alongside <i>nintendogs + cats</i>, and that game was the ONLY 3DS game i ever had throughout my childhood with this little thing. and honestly, <i>nintendogs + cats</i> was enough to satisfy me for years and years. though to be fair, i mostly just played DS games on my 3DS.</p>
   <p>i think thanks to my parents, i learned how to take better care of my 3DS (compared to my DS lite, rest in peace that thing.) to the point where i am very proud to announce that it does not even have a scratch on the bottom screen. it is in incredible conditions to this day.</p>
@@ -34,22 +35,27 @@
    <figcaption>making use of the 3DS camera</figcaption>
   </figure>
   <p>overall, i love the 3DS system. i dont give a fuck if its the nostalgia but i just love the little gimmicks that this console has. from the camera, to the game notes, to the now nonexistent miiverse, to flipnote: i feel like even if you didn't have anything to play here, you can always find something to do here. i also love the streetpass feature this console has and i wish there was something similar to that with the switch.</p>
-  <p><b>useful links:</b> <a href="https://3ds.hacks.guide/" target="_blank" class="outlink">3ds hacks</a>, <a href="https://r-roms.github.io/megathread/nintendo/" target="_blank" class="outlink">nintendo roms</a></p>
-  <h2>switch lite</h2>
+  <p><b>useful links:</b> <a href="https://3ds.hacks.guide/" target="_blank" class="outlink">3ds modding guide</a>, <a href="https://r-roms.github.io/megathread/nintendo/" target="_blank" class="outlink">nintendo roms</a></p>
+  <h2 id="switch-lite">switch lite</h2>
   <img src="!g/consoles/switch.jpg" alt="my switch lite showcasing some games" width="70%" class="right">
   <p>i often call this my <b>indie machine</b> because that is mostly what i use it for, to play indie games.</p>
   <p>this is my first console that i bought with my hard earned retail money during april 2020. i remember i actually bought it and preordered <a href="acnh/index.html">animal crossing: new horizons</a> once it arrived. and my god was i hooked on that game. til i got sick of it of course.</p>
   <p>i also played some more... less indie games in here like <a href="fortnite/index.html">fortnite</a>, <i>minecraft</i>, <i>fall guys</i>, and <a href="splatoon-2/index.html">splatoon 2</a>. with <i>fortnite</i> being the reason as to why i had to open up my switch and replace the left joystick for a new one. <small>do not play fortnite. specially on the switch. its not worth it.</small></p>
   <p>i think the switch is very nice if you want something that isnt like $500 and be able to play it on the go. though i do have to say that i should have waited a tiny bit to be able to afford the normal switch. despite the switch lite being for comfortable to play in its handheld mode, i think i would have appreciated a bit more the switch controllers and also the fact that you can play your games on a big tv. and also the usb port. i have a $100 taiko drum that i have to use with a USB-C DONGLE so i can play it with my switch lite.</p>
 
-  <h2>PS4</h2>
+  <h2 id="ps4">PS4</h2>
   <!-- add pic of ps4! -->
   <p>my goodness gracious. this beast came to me on christmas 2016 (thank you dad, we love you dad) after finding out that <a href="fallout-4/index.html">fallout 4</a> couldn't run on my shitty laptop. i actually have no clue how my dad did it (economically wise) but on the 26th we went to best buy (not sponsored) and he got me a PS4 alongside <i>fallout 4</i>.</p>
   <p>ever since i saw this <a title="inFAMOUS Second Son -- Official Gameplay Spot" href="https://youtu.be/JhtU_sjQzjM" target="_blank" class="outlink">commercial</a> for the PS4, i've always wanted one. there was also that time when <a href="https://en.wikipedia.org/wiki/P.T._(video_game)" target="_blank" class="outlink">P.T.</a> came out and i was DYINGGGGG to play that demo but i never got to do that. L.</p>
   <p>i've always had an immense love for this console since it's the only thing i'm able to use those beefy AAA games i play every 2 years or so. though i did play <i>fallout 4</i> the most here. i believe reaching 260 hrs of gameplay.</p>
-  <p>around july 2023 i started having wifi and blutooth problems. i replaced the antenna and that didn't fix it. meaning the problem was the chip attached to the motherboard <img src="/!g/pix/catfire.gif" alt=""> my PS4 is technically unusable because the dualshock 4 connects via bluetooth ONLY for some god damn reason??? it's really dumb and i hate it so much. the console turns on and everything just fine. i ordered an actual wired controller so i'll see if i can manage to use it with that.</p>
-  <h2>wii u</h2>
-  <p>i wanted you when no one else did. (will write more soon)</p>
+  <p>around july 2023 i started having wifi and blutooth problems. i replaced the antenna and that didn't fix it. meaning the problem was the chip attached to the motherboard <img src="/!g/pix/catfire.gif" alt=""> my PS4 is technically unusable because the dualshock 4 connects via bluetooth <u>ONLY</u> for some god damn reason??? it's really dumb and i hate it so much. the console turns on and everything just fine. i ordered an actual wired controller so i'll see if i can manage to use it with that. will update this once i figure this out. anyways, i just really wanna play <a href="bloodborne/index.html">bloodborne</a>.</p>
+  <h2 id="wii-u">wii u</h2>
+  <p>another christmas present but this time of 2015 (another thank you dad, we love you dad) BUT i actually did contribute a bit of the budget for this console. i had saved up $100 for it and agreed with my dad to let him buy me the console in exchange for the money i had saved up for it. i was saving up for this console because i really wanted <i>mario kart 8</i>. for some god damn reason.</p>
+  <p>he got me the wii u that came bundled with <i>super mario 3D world</i> and my GOD was that game so great. such a blast. the wii u was such a great console to me and my sister. i had a lot of fun playing games like <i>super mario 3D world</i> and <i>donkey kong country: tropical freeze</i> with her and it's honestly one of my highlights for this console.</p>
+  <p>there was one time the HDMI port broke for some reason and we had to mail it out to nintendo support (or something like that) for repair. that was fun.</p>
+  <p>i didn't play much on this console outside of nintendo games tbh (well it's probably the only thing it had going for it) OH and to play <i>guitar hero 5</i> which was a wii game that i have been playing for years til my mom gave away my guitar controller when i moved away because she thought i wouldn't care about it anymore..........</p>
+  <p>but at least she didn't give away my wii u. just like my <a href="#3ds">3DS</a>, i hacked my wii u on june 2024. been playing some games like <i>my sims</i> and <i>yoshi's woolly world</i> which were games i've always wanted to play but never bothered to get them.</p>
+  <p><b>useful links:</b> <a href="https://wiiu.hacks.guide/" target="_blank">wii u modding guide</a>, <a href="https://wii.hacks.guide/vwii-homebrew-channel.html" target="_blank">virtual wii modding guide</a></p>
   <hr>
   <b>last updated on: 19.dec.24</b>
  </main>
