fixed embeded width

--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -46,8 +46,8 @@
    <figcaption><i>GingaMingaYo</i> recorded with my 3DS. <a title="youtube" href="https://youtu.be/cYFgxbl2Ivk" target="_blank">full clip</a></figcaption>
   </figure>
   <center>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/J_eh5vN3esU?si=UquSQY7FcfWTeSet" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/3vXBRlm80iU?si=5ssewrOlTVQlXf8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <iframe width="100%" height="315" src="https://www.youtube.com/embed/J_eh5vN3esU?si=UquSQY7FcfWTeSet" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <iframe width="100%" height="315" src="https://www.youtube.com/embed/3vXBRlm80iU?si=5ssewrOlTVQlXf8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </center>
   <hr>
   <h3 id="oneus-1">07.feb.23 - oneus</h3>
