--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -13,7 +13,7 @@
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<style>
-		#iframepc {
+		main {
 			text-align: center;
 		}
 
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-	<div id="iframepc">
+	<main>
 		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
 		<p>sharing my thoughts, progress, and screenshots of video games i've played!</p>
@@ -54,6 +54,7 @@
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>20.dec.24: new: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a> + log: <a href="games/fallout-new-vegas/index.html">fallout new vegas</a></li>
 			<li>19.dec.24: new: <a href="hardware/index.html">hardware</a> subpage + <a href="games/window-garden/index.html">window garden</a></li>
 			<li>29.nov.24: log: <a href="games/style-savvy-styling-star/">style savvy styling star</a></li>
 			<li>31.oct.24: minor changes around info.html + did a <a href="spreadsheet.html">spreadsheet</a> page of my gaming log!
@@ -71,7 +72,7 @@
 
 		<h3>credit</h3>
 		<p>heading <a href="/notebook/links/fonts.html" target="_blank">font</a> is yoster / filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a> / iframe links by <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a> / background is from <a href="games/hld/index.html">hyper light drifter</a></p>
-	</div>
+	</main>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
 </body>
