added a cat img to abt page + minor fix on homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -139,7 +139,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="piclog" class="box">
 			<h2>piclog</h2>
-			<a href="https://piclog.blue/profile.php?id=51"><img src="https://piclog.blue/latest.php?id=51" width="90%"></a>
+			<a href="https://piclog.blue/profile.php?id=51" title="my piclog profile!" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="90%"></a>
 		</div>
 
 		<div id="featured-cat" class="box">
