--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -158,6 +158,7 @@
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
 					<img src="/collection/cats/!g/grindneverstarts.jpg">
+					<img src="!g/me-irl/cat-bbq.jpg" alt="cats having a nice bbq">
 					<img src="!g/me-irl/birthday-seal.jpg">
 					<img src="!g/me-irl/epic-vamp.jpg">
 					<img src="/collection/cats/!g/hessokind.jpg">
