--- a/doqmeat/journal/credit.html
+++ b/doqmeat/journal/credit.html
@@ -6,7 +6,7 @@
 coded with love by des
  -->
  <meta charset="UTF-8">
- <title>october 2024</title>
+ <title>credit</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="favicon.gif" rel="icon" type="image/x-icon">
  <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -24,6 +24,7 @@ coded with love by des
   <header class="hide">
    <small><a href="../index.html" target="_parent">out of frame? click here!</a></small>
   </header>
+  <h2>credit</h2>
   <li>draggable js code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></li>
   <li>blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></li>
   <li>cute memo scans by <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></li>
