--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -31,35 +31,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 
 		<nav>
 			<h1 style="padding:0px;margin-bottom:2px;">des' journal</h1>
-			<p>i write about my life, site stuff, and any other misc things here. <small>i don't proof read what i write in these.</small> <a href="credit.html" target="log">credit</a></p>
-			<details>
-				<summary>2024</summary>
-				<a href="2024/12.html" target="log">december</a>
-				<a href="2024/11.html" target="log">november</a>
-				<a href="2024/10.html" target="log">october</a>
-				<a href="2024/09.html" target="log">september</a>
-				<a href="2024/08.html" target="log">august</a>
-				<a href="2024/07.html" target="log">july</a>
-				<a href="2024/06.html" target="log">june</a>
-				<a href="2024/05.html" target="log">may</a>
-				<a href="2024/04.html" target="log">april</a>
-				<a href="2024/03.html" target="log">march</a>
-				<a href="2024/02.html" target="log">february</a>
-				<a href="2024/01.html" target="log">january</a>
-			</details>
-			<details>
-				<summary>2023</summary>
-				<a href="2023/12.html" target="log">december</a>
-				<a href="2023/11.html" target="log">november</a>
-				<a href="2023/10.html" target="log">october</a>
-				<a href="2023/09.html" target="log">september</a>
-				<a href="2023/08.html" target="log">august</a>
-				<a href="2023/07.html" target="log">july</a>
-				<a href="2023/06.html" target="log">june</a>
-				<a href="2023/05.html" target="log">may</a>
-				<a href="2023/04.html" target="log">april</a>
-			</details>
-
+			<p>i write about my life, site stuff, and any other misc things here. <small>i don't proof read what i write in these.</small> <br> <a href="archive.html" target="log">archive</a> - <a href="credit.html" target="log">credit</a></p>
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 
 			<p>links: <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink"> moku.blog</a></p>
