fixed hardware link

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -47,7 +47,7 @@
 		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
 		<p>sharing my thoughts, progress, and screenshots of video games i've played!</p>
-		<p><b>subpages:</b> <a href="spreadsheet.html">spreadsheet</a> / <a href="consoles.html">hardware</a></p>
+		<p><b>subpages:</b> <a href="spreadsheet.html">spreadsheet</a> / <a href="hardware/index.html">hardware</a></p>
 		<p>spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
