--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -28,9 +28,8 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>thoughts n highlights of stuff i listen to! i try my best to be as detailed <small>and coherent</small> as possible in these. usually first listens unless stated otherwise. you can see more of the stuff i listen to over @ my <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM page</a> since i do these a bit rarely on my site nowadays!</p>
+		<p>ramblings about things that i listen to. these are a bit rarer nowaways so feel free to check out my <a href="https://rateyourmusic.com/list/doqmeat/" target="_blank" class="outlink">RYM page</a> where i make yearly lists of everything i listen to + highlights. very lowkey though compared to this listening log.</p>
 		<h3>pages</h3>
-		<p>these will open on their own tab! listening logs body bg pic by <a href="https://unsplash.com/@juanster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Juan Davila</a> on <a href="https://unsplash.com/photos/lake-under-blue-sky-during-daytime-P8PlK2nGwqA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
 
 		<h4>2024</h4>
 		<a href="2024/fall.html" target="_parent">fall</a>
@@ -168,7 +167,8 @@
 			<p><a href="2023/04.html#2" target="_parent">アイドル (idol)</a> - yoasobi</p>
 			<p><a href="2023/04.html#1" target="_parent">here i stand</a> - yuragi</p>
 		</details>
-
+		<hr>
+		listening logs body bg pic by <a href="https://unsplash.com/@juanster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Juan Davila</a> on <a href="https://unsplash.com/photos/lake-under-blue-sky-during-daytime-P8PlK2nGwqA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 	</div>
 	<footer><a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
 </body>
