--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -32,6 +32,10 @@
 
 		<div id="blog">
 
+			<article id="241221">
+				<p><b>21.dec.24 - 8pm</b> i find it kinda sad that haven't been able to really do much with my <a href="/music/listening-log/index.html">listening log</a> this year. i overall don't really mind that anything that i do on this website requires a lot of time to format since this this all raw HTML. but there was something i wish i could change that with, it would probably be with my listening log. i wish it was easier to log stuff in there now that i am pretty busy with my life. i don't know if i should let go of the high standars that i hold my listening log to (write extensive paragraphs as to why i liked something) or just go with a more casual mindset of just highlights and a sentence or 2 of what i liked. but idk. honestly i just wish i had a bit more of time for music in general. i miss listening to lots of new stuff on a monthly basis. maybe that should be a goal of mine for next year. get in the groove of listening to more new music. i'll probably change the listening log to be a yearly page instead of doing it by seasons</p>
+			</article>
+
 			<article id="241211-5pm">
 				<p><b>11.dec.24 - 5pm</b> today was my last day of classes for this semester! the time passed by pretty quickly this time. i've been trying to revive my PS4 these days. will probably write a log about that soon. jesus christ.</p>
 			</article>
