--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -150,7 +150,7 @@
 			<a title="devils" href="https://devils.gay" target="_blank"><img src="!g/devils.gay.gif" alt="devils.gay"></a>
 			<a title="item64" href="https://item64.neocities.org" target="_blank"><img src="!g/item64.gif" alt="item64"></a>
 			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
-			<a title="rice" href="https://rice.nekoweb.org/" target="_blank"><img src="https://rice.nekoweb.org/kamabokogonpachiro.gif"></a>
+			<a title="rice" href="https://rice.place/" target="_blank"><img src="https://rice.nekoweb.org/button/riceplace.png"></a>
 			<a title="humantooth" href="https://humantooth.neocities.org" target="_blank"><img src="!g/humantooth.png" alt="humantooth"></a>
 			<a title="raum" href="https://raum.neocities.org/" target="_blank"><img src="!g/raum.gif" alt="raum"></a>
 			<a title="feelingmachine" href="https://feelingmachine.moe/" target="_blank"><img src="!g/feelingmachine.png" alt="feelingmachine"></a>
