updated style savvy pages + nintendogs

--- a/doqmeat/vgs/games/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/games/style-savvy-trendsetters/index.html
@@ -56,7 +56,7 @@
 		<p>
 			<span class="date">30.aug.24</span> after 41 hours of playing this game,
 			i finally saw the credits roll
-			<img src="/!g/pix/emote1lov3.gif" alt /> will prob play a bit more
+			<img src="/!g/pix/emote1lov3.gif"> will prob play a bit more
 			here and there but now i can finally move on to another style savvy
 			game! will probably play <i>styling star</i> next.
 		</p>
@@ -135,6 +135,9 @@
 		<h3>screenshots</h3>
 		<center>
 			<h4>my character</h4>
+			<figure> <img src="241224.JPG" style="max-width:100%;">
+				<figcaption>me irl</figcaption>
+			</figure>
 			<figure>
 				<img src="nuances.bmp" style="max-width: 90%" alt="cover of nuances magazine!">
 				<figcaption>nuances babyyyy!</figcaption>
@@ -145,8 +148,9 @@
 				<figcaption>sorry all of my pics are in this pose FLSKFD</figcaption>
 			</figure>
 			<img src="240612%20(1).jpg" style="max-width: 90%" />
-			<img src="240603%20(4).jpg" style="max-width: 90%" />
-			<p><small>look how cute i look!</small></p>
+			<figure><img src="240603%20(4).jpg" style="max-width: 90%" />
+				<figcaption>look how cute i look!</figcaption>
+			</figure>
 			<img src="240603%20(3).jpg" style="max-width: 90%" />
 			<img src="240603%20(2).jpg" style="max-width: 90%" />
 			<h4>others</h4>
