added more kirby screenshots

--- a/doqmeat/vgs/games/kirby-planet-robobot/index.html
+++ b/doqmeat/vgs/games/kirby-planet-robobot/index.html
@@ -5,7 +5,7 @@
  <meta charset="UTF-8">
  <title>kirby planet robobot</title>
  <link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
- <link href="../body.css" rel="stylesheet" type="text/css" media="all">
+ <link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
  <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
  <!-- tooltip shit -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -24,8 +24,12 @@
   <h3>logs</h3>
   <p><span class="date">20.dec.24</span>been playing this for the past month! i find it super adorable. while the gameplay itself might be easy, there's always a little bit of extra challenge if you want to collect all of the cubes! this is my first ever kirby game so i'm kinda having a blast. also i love how the 3D effects are used in this game as well.</p>
   <center>
-   <img src="kirby (1).bmp" style="max-width:100%;" alt="">
-   <img src="kirby (2).bmp" style="max-width:100%;" alt="">
+   <img src="kirby (1).bmp" style="max-width:100%;" alt="in-game screenshots">
+   <img src="kirby (2).bmp" style="max-width:100%;" alt="in-game screenshots">
+   <img src="kirby (3).bmp" style="max-width:100%;" alt="in-game screenshots">
+   <figure><img src="kirby (4).bmp" style="max-width:100%;" alt="in-game screenshots">
+    <figcaption>sleepy baby</figcaption>
+   </figure>
   </center>
  </main>
 
