updated vgs index

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -4,8 +4,6 @@
 <head>
 	<!-- 
 coded with love by des
-----
-how to get an img to recognize the :focus thingy in css: https://stackoverflow.com/questions/27327765/how-to-get-a-img-tag-the-focus
 -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +19,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 	<!--  end of tooltip shit -->
 	<script src="https://melonking.net/scripts/frame-link.js"></script>
 	<script>
-		titlePrefix = "gaming log - ";
-
+		titlePrefix = "vgs - ";
 	</script>
 	<style>
 	</style>
@@ -210,6 +207,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<div class="thumb sim  currently finished fav">
 			<a title="style savvy: trendsetters" href="games/style-savvy-trendsetters/index.html" target="log"><img src="games/style-savvy-trendsetters/cover.png" tabindex="0"></a>
+		</div>
+		<div class="thumb sim currently notdone">
+			<a title="style savvy: fashion forward" href="games/style-savvy-fashion-forward/index.html" target="log"><img src="games/style-savvy-fashion-forward/cover.bmp" alt="style savvy fashion forward" tabindex="0"></a>
 		</div>
 		<div class="thumb sim currently notdone">
 			<a title="style savvy: styling star" href="games/style-savvy-styling-star/index.html" target="log"><img src="games/style-savvy-styling-star/cover.png" alt="style savvy styling star" tabindex="0"></a>
