--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -45,6 +45,9 @@
 				<article>hi this is the 2025 section. you're a bit early to the party...</article>
 			</section>
 			<section id="y2024">
+				<article id="241227">
+					<p><b>27.dec.24 - 11pm</b> man i got sick again what in the GODDAMN???? i've gotten sick 3 times in the past 2 months... jesus. i used to get sick like every 3 years and now its 2 times or more every year.</p>
+				</article>
 				<article id="2412259pm">
 					<p><b>25.dec.24 - 9pm</b> it did not work... sigh... will be returning the wired controller soon. i'm gonna have to save up a bit before i can send it <a href="https://www.ebay.com/itm/152743633313" target="_blank" class="outlink">away</a>...</p>
 				</article>
