--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -6,7 +6,7 @@
 coded with love by des
  -->
  <meta charset="UTF-8">
- <title>october 2024</title>
+ <title>archive</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="favicon.gif" rel="icon" type="image/x-icon">
  <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -24,6 +24,7 @@ coded with love by des
   <header class="hide">
    <small><a href="../index.html" target="_parent">out of frame? click here!</a></small>
   </header>
+  <li>01.jan.25 - <a href="2025/01.html#1">i am tired, but also a bit joyful</a></li>
   <li>17.dec.24 - <a href="2024/12.html#17">1st year of uni done!</a></li>
   <li>23.nov.24 - <a href="2024/11.html#23">my new furry friend: steve</a></li>
   <li>31.oct.24 - <a href="2024/10.html#31">happy halloween</a></li>
