--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -142,7 +142,6 @@
 			<a title="ribo.zone" href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="kaftofi" href="https://sea-of-colors.neocities.org/" target="_blank"><img src="!g/sea-of-colors.gif" alt="sea of colors"></a>
 			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
-			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 			<a title="alpawca" href="https://alpawca.neocities.org" target="_blank"><img src="!g/alpawca.gif" alt="alpawca"></a>
 			<a title="neet" href="https://fujoshi.nekoweb.org" target="_blank"><img src="!g/neetretreat.png" alt="neet retreat"></a>
 			<a title="cherie / niki" href="https://cherie.nekoweb.org" target="_blank"><img src="!g/cherie.gif" alt="cherie"></a>
@@ -157,7 +156,7 @@
 			<a title="i can read this site for hours and hours. so many interesting bits in here" href="https://incessantpain.neocities.org/" target="_blank"><img src="!g/incessantpain.gif"></a>
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sabrin.party" target="_blank"><img src="!g/sabrin.gif" alt="sabrin"></a>
-			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/versipellis.png"></a>
+			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="https://versipellis.net" target="_blank"><img src="!g/versipellis.png"></a>
 			<a title="chocolate-cake" href="https://chocolate-cake.neocities.org" target="_blank"><img src="!g/chocolate-cake.gif" alt="chocolate-cake"></a>
 			<a title="chronodove - this site gives me off such an interesting vibe! love their writings" href="https://chronodove.neocities.org/" target="_blank"><img src="!g/chronodove.png" alt="chronodoves"></a>
 			<a title="circat" href="https://circat.neocities.org" target="_blank"><img src="!g/circat.png" alt="circat"></a>
@@ -184,11 +183,15 @@
 			<a href="https://onthequiet.nekoweb.org/" target="_blank"><img src="!g/onthequiet.gif" alt="onthequiet"></a>
 			<a href="https://miserabledolly.neocities.org/" target="_blank"><img src="!g/miserabledolly.gif" alt="miserabledolly"></a>
 			<a href="https://strawberryreverie.neocities.org" target="_blank"><img src="!g/strawberryreverie.gif" alt="strawberryreverie"></a>
-			<a href="https://taami.neocities.org/" target="_blank"><img src="!g/taami.gif" alt="taami"></a>
+			<a title="anita - lovely site and personality!" href="https://taami.neocities.org/" target="_blank"><img src="!g/taami.gif" alt="taami"></a>
 			<a href="https://visualculture.vc/" target="_blank"><img src="!g/visualculture.png" alt="visualculture"></a>
 			<a href="https://iwishyouroses.neocities.org/" target="_blank"><img src="!g/iwishyouroses.png" alt="i wish you roses"></a>
 			<a href="https://8bitgalaxyhunts.neocities.org/" target="_blank"><img src="!g/8bitgalaxy.gif" alt="8bitgalaxy"></a>
-			<a href="https://bloodbathspite.neocities.org/blog/" target="_blank"><img src="!g/bloodbathspite.gif" alt="bloodbathspite"></a>
+			<a href="https://bloodbathspite.neocities.org/" target="_blank"><img src="!g/bloodbathspite.gif" alt="bloodbathspite"></a>
+			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org"><img src="!g/bootleg.png" alt="bootleg"></a>
+			<a href="https://bunnyisland.neocities.org/"><img src="!g/bunnyisland.png" alt="bunnyisland"></a>
+			<a href="https://pixeliana.neocities.org/"><img src="!g/pixeliana.gif" alt="pixeliana"></a>
+
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
@@ -279,7 +282,6 @@
 			<a title="windchime - one of the early sites i discovered. used one of their templates for v1 of doqmeat.com too!" href="https://windchime.neocities.org/" target="_blank"><img src="!g/windchime.gif"></a>
 			<a title="whiona" href="https://whiona.me/" target="_blank"><img src="!g/whiona.png" alt="whiona"></a>
 			<a title="leilukin" href="https://leilukin.com/" target="_blank"><img src="!g/Leilukin.png" alt="leilukin"></a>
-			<a title="april" href="https://april.lexiqqq.com/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 			<a href="https://pixalina.neocities.org/" target="_blank"><img src="!g/pixalina.gif" alt="pixalina"></a>
 			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
 			<a href="https://blog.radicaldream.land" target="_blank"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
@@ -291,6 +293,7 @@
 			<a href="https://poble.cl/" target="_blank"><img src="!g/poble.gif" alt="poble"></a>
 			<a href="https://unicodeangel.neocities.org/" target="_blank"><img src="!g/unicodeangel.gif" alt="unicodeangel"></a>
 			<a href="https://milk-tea.neocities.org" target="_blank"><img src="!g/milk-tea.gif" alt="milk-tea"></a>
+			<a title="web dev hobbyist site!" href="https://fabled.day/"><img src="!g/fabled.gif" alt="fabled"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -377,6 +380,7 @@
 
 		<h4 id="fansite">fansites</h4>
 		<a title="fansite for kpop group billlie" href="https://billlielove.neocities.org/" target="_blank"><img src="!g/billlielove.webp" alt="billlielove"></a>
+		<a href="https://read-nekojiru.neocities.org/"><img src="!g/read-nekojiru.gif" alt="read-nekojiru"></a>
 
 		<h4 id="fun">for fun / misc</h4>
 		<div class="neo">
@@ -431,15 +435,17 @@
 			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
 			<a href="https://panaceas.neocities.org" target="_blank"><img src="!g/panaceas.png"></a>
 			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
-			<a title=" vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
+			<a title="vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
 			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
+			<a title="april" href="https://april.lexiqqq.com/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
 			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
 			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank">blackwater</a> /
-			<a href="https://karameruu.neocities.org/" target="_blank">karameruu</a>
+			<a href="https://karameruu.neocities.org/" target="_blank">karameruu</a> /
+			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 		</p>
 
 		<!--box1 end wrapper end div-->
