--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -188,9 +188,9 @@
 			<a href="https://iwishyouroses.neocities.org/" target="_blank"><img src="!g/iwishyouroses.png" alt="i wish you roses"></a>
 			<a href="https://8bitgalaxyhunts.neocities.org/" target="_blank"><img src="!g/8bitgalaxy.gif" alt="8bitgalaxy"></a>
 			<a href="https://bloodbathspite.neocities.org/" target="_blank"><img src="!g/bloodbathspite.gif" alt="bloodbathspite"></a>
-			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org"><img src="!g/bootleg.png" alt="bootleg"></a>
-			<a href="https://bunnyisland.neocities.org/"><img src="!g/bunnyisland.png" alt="bunnyisland"></a>
-			<a href="https://pixeliana.neocities.org/"><img src="!g/pixeliana.gif" alt="pixeliana"></a>
+			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org" target="_blank"><img src="!g/bootleg.png" alt="bootleg"></a>
+			<a href="https://bunnyisland.neocities.org/" target="_blank"><img src="!g/bunnyisland.png" alt="bunnyisland"></a>
+			<a href="https://pixeliana.neocities.org/" target="_blank"><img src="!g/pixeliana.gif" alt="pixeliana"></a>
 
 		</div>
 
@@ -204,7 +204,8 @@
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
 			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
 			<a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a> /
-			<a href="https://vianamana.neocities.org/" target="_blank">vianamana</a>
+			<a href="https://vianamana.neocities.org/" target="_blank">vianamana</a> /
+			<a href="https://nicolesworld.neocities.org" target="_blank">nicolesworld</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> others</h3>
@@ -293,7 +294,7 @@
 			<a href="https://poble.cl/" target="_blank"><img src="!g/poble.gif" alt="poble"></a>
 			<a href="https://unicodeangel.neocities.org/" target="_blank"><img src="!g/unicodeangel.gif" alt="unicodeangel"></a>
 			<a href="https://milk-tea.neocities.org" target="_blank"><img src="!g/milk-tea.gif" alt="milk-tea"></a>
-			<a title="web dev hobbyist site!" href="https://fabled.day/"><img src="!g/fabled.gif" alt="fabled"></a>
+			<a title="web dev hobbyist site!" href="https://fabled.day/" target="_blank"><img src="!g/fabled.gif" alt="fabled"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
