--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -423,6 +423,7 @@
 
 
 		<h2 id="div">dividers</h2>
+		<img src="/!g/div/crismas.gif" alt="christmas divider">
 		<img src="/!g/div/balloon.gif">
 		<img src="/!g/div/scissors.gif">
 		<img src="/!g/div/clothes.gif">
