new featured music

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -53,7 +53,7 @@
 		<p>every once in a while i pick a song &amp; album to highlight on my page! take these as recommendations and just stuff i'm currently listening to :3</p>
 		<!-- contents 
 <details><summary>
-<span class="date">00.xxx.24 - ? : </span>
+<span class="date">00.xxx.25 - ? : </span>
 </summary>
 <table><td class="t-left">
 iframe1
@@ -62,9 +62,26 @@ iframe2
 </td></table>
 </details>
 -->
-		<details open>
+		<details>
 			<summary>
-				<span class="date">16.nov.24 - ??? : DIM / seeyalater stratocaster</span>
+				<span class="date">01.jan.25 - ? : worm in the apple / angel interview</span>
+			</summary>
+			<p>i don't feel like doing a 2024 music recap (<small>or at least not in the way that i've always done them</small>) so i figured i should share my most liked song n album of that year!</p>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/rUX9BTtdHdY?si=PJGRWfww9__OJHL9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>my song of the year, it is so catchy. it really kinda does make me feel like a worm.</p>
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=EBOnD5gvk1HXdpGA&amp;list=OLAK5uy_kSq0v4ExLeSLovLfNeliif-ERxpPLKyVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>and my album of the year. a very splendid listening experience with a little surprise at the end.</p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">16.nov.24 - 01.jan.25 : DIM / seeyalater stratocaster</span>
 			</summary>
 			<table>
 				<td class="t-left">
