--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
    <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
    <p><b>01.nov.24</b> - revived my <a href="playlists.html" target="mainframe">playlists</a> mini page</p>
    <p><b>22.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#4">crystal castles</a> + <a href="listening-log/2024/fall.html#5">MG ultra</a></p>
@@ -87,14 +88,14 @@
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
-    <h4><b>DIM</b> - yves</h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5bTxQVXR82w?si=TkmNSBK0JH6quKp7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>yves' new EP was pretty neat! i love the beat switch of this one tho.... feels so ethereal. really nice ending to the release.</p>
+    <h4><b>worm in the apple</b> - youra</h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rUX9BTtdHdY?si=PJGRWfww9__OJHL9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>my song of the year, it is so catchy. it really kinda does make me feel like a worm.</p>
    </div>
    <div class="lp">
-    <h4><b>seeyalater stratocaster</b> - ippo.tsk</h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RfZplKbuOdI?si=du9qvEbwTRbTPB8H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>super neat indie rock with synth vocals.</p>
+    <h4><b>angel interview</b> - meaningful stone</h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=EBOnD5gvk1HXdpGA&amp;list=OLAK5uy_kSq0v4ExLeSLovLfNeliif-ERxpPLKyVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>and my album of the year. a very splendid listening experience with a little surprise at the end.</p>
    </div>
    <hr>
 
