--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -126,10 +126,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> fallout new vegas, kirby planet robobot</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> beastars (final season), dandadan</p>
+			<p><span class="hl">watching:</span> beastars (final season)</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> adding more gaming logs</p>
-			<p class="date">last updated on 19.dec.24</p>
+			<p><span class="hl">working on:</span> not much!</p>
+			<p class="date">last updated on 02.jan.25</p>
 		</div>
 
 		<div id="featured-page" class="box">
