--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -98,7 +98,8 @@
 					<img src="!g/utena.png" alt="revolutionary girl utena poster" class="cover">
 					<h2 id="utena">revolutionary girl utena</h2>
 					<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
-					<p class="status">eps 27/39</p>
+					<p>edit: wow. i get it now.</p>
+					<p class="status">finished</p>
 				</div>
 			</div>
 
