reverted listening log css to original one

--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -30,22 +30,23 @@
 		<h2>listening logs</h2>
 		<p>ramblings about things that i listen to. these are a bit rarer nowaways so feel free to check out my <a href="https://rateyourmusic.com/list/doqmeat/" target="_blank" class="outlink">RYM page</a> where i make yearly lists of everything i listen to + highlights. very lowkey though compared to this listening log.</p>
 		<h3>pages</h3>
-
+		<h4>2025</h4>
+		<a href="2025/index.html">soon!</a>
 		<h4>2024</h4>
-		<a href="2024/fall.html" target="_parent">fall</a>
-		<a href="2024/summer.html" target="_parent">summer</a>
-		<a href="2024/spring.html" target="_parent">spring</a>
-		<a href="2024/winter.html" target="_parent">winter</a>
+		<a href="2024/fall.html">fall</a>
+		<a href="2024/summer.html">summer</a>
+		<a href="2024/spring.html">spring</a>
+		<a href="2024/winter.html">winter</a>
 		<h4>2023</h4>
-		<a href="2023/12.html" target="_parent">december</a>
-		<a href="2023/11.html" target="_parent">november</a>
-		<a href="2023/10.html" target="_parent">october</a>
-		<a href="2023/09.html" target="_parent">september</a>
-		<a href="2023/08.html" target="_parent">august</a>
-		<a href="2023/07.html" target="_parent">july</a>
-		<a href="2023/06.html" target="_parent">june</a>
-		<a href="2023/05.html" target="_parent">may</a>
-		<a href="2023/04.html" target="_parent">april</a>
+		<a href="2023/12.html">december</a>
+		<a href="2023/11.html">november</a>
+		<a href="2023/10.html">october</a>
+		<a href="2023/09.html">september</a>
+		<a href="2023/08.html">august</a>
+		<a href="2023/07.html">july</a>
+		<a href="2023/06.html">june</a>
+		<a href="2023/05.html">may</a>
+		<a href="2023/04.html">april</a>
 
 		<h3>all listening logs</h3>
 		<details>
@@ -167,8 +168,6 @@
 			<p><a href="2023/04.html#2" target="_parent">アイドル (idol)</a> - yoasobi</p>
 			<p><a href="2023/04.html#1" target="_parent">here i stand</a> - yuragi</p>
 		</details>
-		<hr>
-		listening logs body bg pic by <a href="https://unsplash.com/@juanster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Juan Davila</a> on <a href="https://unsplash.com/photos/lake-under-blue-sky-during-daytime-P8PlK2nGwqA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 	</div>
 	<footer><a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
 </body>
