--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -8,83 +8,89 @@
 	<meta name="description" content="doqmeat's reading log">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="" rel="stylesheet" type="text/css" media="all">
+	<link href="body.css" rel="stylesheet" type="text/css" media="all">
+	<!-- tooltip -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
-	<style>
-		details {
-			display: inline;
-		}
-
-		summary {
-			display: inline;
-			cursor: help;
-		}
-	</style>
 </head>
 
 <body>
-	<h1>reading log</h1>
-	<h2>current</h2>
-	<ul>
-		<li>chainsaw man -- (ongoing)
-			<details>
-				<summary>+</summary>fujimoto going to hell bro.
-			</details>
-		</li>
-		<li>the guy she was interested in wasn't a guy at all -- (ongoing)</li>
-		<li>company and private life -- (ongoing)</li>
-	</ul>
+	<main>
+		<h1>reading log</h1>
+		<h2>current</h2>
+		<ul>
+			<li>chainsaw man -- (ongoing)
+				<details>
+					<summary>+</summary>fujimoto going to hell bro. but anyways.
+					<br>
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (1).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (2).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (3).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (4).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (5).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (6).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (7).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (8).jpg">
+					<img src="/!g/media/chainsawman-manga/ch1-42-shots (9).jpg">
+				</details>
+			</li>
+			<li>the guy she was interested in wasn't a guy at all -- (ongoing)</li>
+			<li>company and private life -- (ongoing)</li>
+		</ul>
 
-	<h2>shelved</h2>
-	<ul>
-		<li>my cat is such a weirdo -- volume 1/3</li>
-		<li>bloodborne -- 13 / ???</li>
-	</ul>
+		<h2>shelved</h2>
+		<ul>
+			<li>my cat is such a weirdo -- volume 1/3</li>
+			<li>bloodborne -- 13 / ???</li>
+		</ul>
 
-	<h2>finished</h2>
-	<ul>
-		<li>villain
-			<details>
-				<summary>+</summary>
-				<p>idk man that was beautiful.</p>
-				<img src="!g/villain/1.jpg" width="40%" alt="screenshots of villain">
-				<br>
-				<img src="!g/villain/2.jpg" width="40%" alt="screenshots of villain">
-				<img src="!g/villain/3.jpg" width="40%" alt="screenshots of villain">
-			</details>
-		</li>
-		<li>mob psycho 100</li>
-		<li>blue</li>
-		<li>look back</li>
-		<li>goodbye, eri</li>
-		<li>our dreams at dusk</li>
-		<li>the little prince</li>
-		<li>paper girls</li>
-		<li>the girl from the sea</li>
-		<li>uzumaki</li>
-		<li>remina</li>
-		<li>my lesbian experience with loneliness</li>
-	</ul>
-	<h2>want to read</h2>
-	<ul>
-		<li>your name / tamen de gushi</li>
-		<li>land of the lustrous</li>
-		<li>witch hat atelier</li>
-		<li>run away with me girl</li>
-		<li>double</li>
-		<li>futaribeya</li>
-		<li>my androgynous boyfriend</li>
-		<li>seishun no hekireki</li>
-		<li>love me for who i am</li>
-		<li>sweet blue flowers</li>
-		<li>puppy love</li>
-		<li>nights with a cat</li>
-		<li>ogi's summer break</li>
-	</ul>
+		<h2>finished</h2>
+		<ul>
+			<li>villain
+				<details>
+					<summary>+</summary>
+					<p>idk man that was beautiful.</p>
+					<img src="!g/villain/1.jpg" width="40%" alt="screenshots of villain">
+					<br>
+					<img src="!g/villain/2.jpg" width="40%" alt="screenshots of villain">
+					<img src="!g/villain/3.jpg" width="40%" alt="screenshots of villain">
+				</details>
+			</li>
+			<li>mob psycho 100</li>
+			<li>blue</li>
+			<li>look back</li>
+			<li>goodbye, eri</li>
+			<li>our dreams at dusk</li>
+			<li>the little prince</li>
+			<li>paper girls</li>
+			<li>the girl from the sea</li>
+			<li>uzumaki</li>
+			<li>remina</li>
+			<li>my lesbian experience with loneliness</li>
+			<li>homestuck</li>
+		</ul>
+		<h2>want to read</h2>
+		<ul>
+			<li>dorohedoro</li>
+			<li>one piece</li>
+			<li>your name / tamen de gushi</li>
+			<li>land of the lustrous</li>
+			<li>witch hat atelier</li>
+			<li>run away with me girl</li>
+			<li>double</li>
+			<li>futaribeya</li>
+			<li>my androgynous boyfriend</li>
+			<li>seishun no hekireki</li>
+			<li>love me for who i am</li>
+			<li>sweet blue flowers</li>
+			<li>puppy love</li>
+			<li>nights with a cat</li>
+			<li>ogi's summer break</li>
+		</ul>
+	</main>
 	<footer>
-		<b>last updated: 11.oct.24</b>
+		<b>last updated: 03.jan.25</b>
 		<br>
 		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
 	</footer>
