--- a/doqmeat/vgs/games/style-savvy-fashion-forward/index.html
+++ b/doqmeat/vgs/games/style-savvy-fashion-forward/index.html
@@ -48,10 +48,10 @@
   <h3>logs</h3>
   <p><span class="date">24.dec.24</span> after getting a bit tired of <a href="../style-savvy-styling-star/index.html">styling star</a>, i decided to play this one around the start of december. i have roughly around... 5 hours on this game. and honestly i really like the premise and all of that. the dollhouse feature and having to decorate and rent out rooms seems pretty fun! the game itself looks different from <a href="../style-savvy-trendsetters/index.html">trendsetters</a> of course but at least it's an art style that i like more compared to <i>styling star</i>. i also absolutely LOVE the fact that the in-game time is based on your irl time (i am too lazy to google the correct term for this). i find it so charming. yes i play this game at 2am.</p>
   <center>
-   <img src="241224 (4).jpg" alt="in-game screenshots of my character" width="48%">
-   <img src="241224 (5).jpg" alt="in-game screenshots of my character" width="48%">
-   <img title="you're gonna have to PRY the black cat beanie from my hands" src="241224 (6).jpg" alt="in-game screenshots of my character" width="48%">
-   <img title="om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om " src="241224 (7).jpg" alt="in-game screenshots of my character" width="48%">
+   <img src="241224 (4).JPG" alt="in-game screenshots of my character" width="48%">
+   <img src="241224 (5).JPG" alt="in-game screenshots of my character" width="48%">
+   <img title="you're gonna have to PRY the black cat beanie from my hands" src="241224 (6).JPG" alt="in-game screenshots of my character" width="48%">
+   <img title="om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om om " src="241224 (7).JPG" alt="in-game screenshots of my character" width="48%">
   </center>
   <p><b>BUT</b> there is something a bit alarming to this game. i am 5 hours in and i am already finding a lot of requests getting repeated to me over and over again?!?!?!? i have no clue why this is an issue HERE because i feel like in <i>trendsetters</i> at least it's not very noticible. i have yet to come up with this sort of problem in <i>styling star</i> and i do have a couple of hours in that game as well. so what happened here? it's honestly a bit disappointing i cant lie!</p>
   <p>but anyways, peace and love, nonetheless. i do love the variety of leg warmers in this game tho. unless it's a skill issue, i feel like <i>trendsetters</i> didn't have that many leg warmer options in rotation.</p>
