added a log for madoka + rebellion screenshots

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -37,6 +37,23 @@
 
 			<div class="show">
 				<div class="box">
+					<img src="!g/madoka.png" onmouseover="this.src='!g/madoka-rebellion/cover.png';" onmouseout="this.src='!g/madoka.png';" class="cover" alt="madoka magica anime cover">
+					<h2 id="rebellion">madoka magica + rebellion</h2>
+					<p>to me, this is art.</p>
+					<p>when i first watched the <i>madoka magica</i> anime alongside <i>rebellion</i> around 2015 i was honestly just very confused and didn't get it all. it took me watching this series again when i was a bit older to really appreciate it. i loved the anime. the music, the witch segments animation. the DRAMA of it all. i am insanely in love with the artistry put into this. which feels a bit silly because i am after all talking about <b>madoka magica</b> but at this point idgaf.</p>
+					<p>and then came <i>rebellion</i> and elevated all of this to 100 times. i have watched this movie at least 10 times. i love it so so so much. homura akemi i would die for you.</p>
+					<p>i really can't wait for the 4th movie to come out. it will be fucking insane if it manages to be better than <i>rebellion</i> since i already consider that movie perfect.</p>
+					<h3>screenshots</h3>
+					<img src="!g/madoka-rebellion/rebellion1.jpg" alt="" width="100%">
+					<img src="!g/madoka-rebellion/rebellion2.jpg" alt="" width="100%">
+					<img src="!g/madoka-rebellion/rebellion3.jpg" alt="" width="100%">
+					<img src="!g/madoka-rebellion/rebellion4.jpg" alt="" width="100%">
+					<p class="status">finished</p>
+				</div>
+			</div>
+
+			<div class="show">
+				<div class="box">
 					<img src="!g/joeperatalkswithyou.png" alt="poster for joe pera talks with you" class="cover">
 					<h2>joe pera talks with you</h2>
 					<p>i will never forget how it felt to get home at 2am from my ass retail job and just turning on the tv to put it in the background as i get ready to go to sleep. the last time i had watched tv i must have left it on <u>adult swim</u> because when i turn on my tv i was met with joe pera's show: <i>joe pera talks with you</i>. i don't know why but i could feel there was something very special about this show. i kinda just sat there mesmerized at the screen. it was an episode from its 2nd season, the one where <span class="spoiler">he writes his grandma an obituary....</span> i think maybe one of the reasons why i was so attached to the tv was because of how much i could relate to what was happening on the screen. i remember thinking <q>what will i do if my grandma ever dies?</q> ... i don't know. it just felt very genuine. and the episode really touched me. i decided to watch the rest of the show that week and i was not disappointed.</p>
@@ -168,7 +185,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 10.nov.24</b></p>
+		<p><b>last updated: 03.jan.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
